--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript" language="Javascript"
     src="https://ajax.microsoft.com/ajax/jquery/jquery-3.6.0.min.js"> </script>
-  <title>跳转页</title>
+  <title>加载中<div class=""></div></title>
 </head>
 <body>
   <script>
