--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript" language="Javascript"
     src="https://ajax.microsoft.com/ajax/jquery/jquery-3.6.0.min.js"> </script>
-  <title>加载中<div class=""></div></title>
+  <title>加载中...</title>
 </head>
 <body>
   <script>
-    window.location.href = "./index/index.html";
+    window.location.href = "./index/.index.html";
   </script>
 </body>
 </html>
