--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <script>
-    window.location.href = "/index/.index.html";
+    window.location.href = "./index/index.html";
   </script>
 </body>
 </html>
